# semantic-kernel-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
src/semantic_kernel_api/: __init__.py  config.py  main.py  schemas.py
src/semantic_kernel_api/services/: agent.py  chat.py
src/semantic_kernel_api/static/: styles.css
src/semantic_kernel_api/templates/: index.html
src/semantic_kernel_api/templates/partials/: chat_result.html
tests/: test_agent.py  test_chat.py  test_health.py  test_ui.py
