[project]
name = "semantic-kernel-api"
version = "0.1.0"
description = "Minimal FastAPI sample prepared for Semantic Kernel, Azure OpenAI, and RAG."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

